--- a/Differentation/Differentation.csproj
+++ b/Differentation/Differentation.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diff\IComparisionStrategy.cs" />
+    <Compile Include="Diff\Version_4\GenericComparer.cs" />
+    <Compile Include="Diff\Version_4\IComparisionStrategy.cs" />
     <Compile Include="Diff\Version_3\GenericComparer.cs" />
     <Compile Include="Diff\Version_2\GenericComparer.cs" />
     <Compile Include="Diff\Version_1\GenericComparer.cs" />
